data model annd seed added

--- a/Best_five_zipcodes.ipynb
+++ b/Best_five_zipcodes.ipynb
@@ -2284,11 +2284,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('pop_cities.csv')"
+    "d_new.to_csv('pop_cities.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 545,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'year_built', 'stories', 'num_bedrooms', 'full_bathrooms',\n",
+       "       'half_bathrooms', 'livable_sqft', 'total_sqft', 'garage_sqft',\n",
+       "       'carport_sqft', 'has_fireplace', 'has_pool', 'has_central_heating',\n",
+       "       'has_central_cooling', 'zip_code', 'sale_price', 'garage_type_attached',\n",
+       "       'garage_type_detached', 'city_East Lucas', 'city_North Erinville',\n",
+       "       'city_Port Andrealand', 'city_Port Jonathanborough', 'city_Wendybury',\n",
+       "       'city_West Ann'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 545,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_new.columns"
    ]
   },
   {
