changes to seed.py parsing

--- a/DataExploration_Cleaning_testing.ipynb
+++ b/DataExploration_Cleaning_testing.ipynb
@@ -1680,6 +1680,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stories\n",
+       "0       1\n",
+       "1    4152\n",
+       "2    3822\n",
+       "3     123\n",
+       "4       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.groupby('stories').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 290,
    "metadata": {},
    "outputs": [
