added tained model

--- a/DataExploration_Cleaning_testing.ipynb
+++ b/DataExploration_Cleaning_testing.ipynb
@@ -1680,6 +1680,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(has_pool\n",
+       " False    6555\n",
+       " True     1544\n",
+       " dtype: int64, has_fireplace\n",
+       " False    2387\n",
+       " True     5712\n",
+       " dtype: int64)"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.groupby('has_pool').size(), selected_zip_codes.groupby('has_fireplace').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(has_central_heating\n",
+       " False     122\n",
+       " True     7977\n",
+       " dtype: int64, has_central_cooling\n",
+       " False     174\n",
+       " True     7925\n",
+       " dtype: int64)"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.groupby('has_central_heating').size(),selected_zip_codes.groupby('has_central_cooling').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 308,
    "metadata": {},
    "outputs": [
@@ -1702,6 +1754,196 @@
    ],
    "source": [
     "selected_zip_codes.groupby('stories').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 8099 entries, 24 to 42353\n",
+      "Data columns (total 21 columns):\n",
+      "year_built             8099 non-null int64\n",
+      "stories                8099 non-null int64\n",
+      "num_bedrooms           8099 non-null int64\n",
+      "full_bathrooms         8099 non-null int64\n",
+      "half_bathrooms         8099 non-null int64\n",
+      "livable_sqft           8099 non-null int64\n",
+      "total_sqft             8099 non-null int64\n",
+      "garage_type            8099 non-null object\n",
+      "garage_sqft            8099 non-null int64\n",
+      "carport_sqft           8099 non-null int64\n",
+      "has_fireplace          8099 non-null bool\n",
+      "has_pool               8099 non-null bool\n",
+      "has_central_heating    8099 non-null bool\n",
+      "has_central_cooling    8099 non-null bool\n",
+      "house_number           8099 non-null int64\n",
+      "street_name            8099 non-null object\n",
+      "unit_number            284 non-null float64\n",
+      "city                   8099 non-null object\n",
+      "zip_code               8099 non-null int64\n",
+      "sale_price             8099 non-null float64\n",
+      "Year_levels            8099 non-null category\n",
+      "dtypes: bool(4), category(1), float64(2), int64(11), object(3)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "selected_zip_codes.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year_built                     2005\n",
+       "stories                           1\n",
+       "num_bedrooms                      2\n",
+       "full_bathrooms                    2\n",
+       "half_bathrooms                    0\n",
+       "livable_sqft                   1563\n",
+       "total_sqft                     1810\n",
+       "garage_type                attached\n",
+       "garage_sqft                     235\n",
+       "carport_sqft                      0\n",
+       "has_fireplace                  True\n",
+       "has_pool                       True\n",
+       "has_central_heating            True\n",
+       "has_central_cooling            True\n",
+       "house_number                     59\n",
+       "street_name            Lewis Avenue\n",
+       "unit_number                     NaN\n",
+       "city                       West Ann\n",
+       "zip_code                      10748\n",
+       "sale_price                   377997\n",
+       "Year_levels               2002-2018\n",
+       "Name: 10408, dtype: object"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.iloc[2090]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>stories</th>\n",
+       "      <th>num_bedrooms</th>\n",
+       "      <th>full_bathrooms</th>\n",
+       "      <th>half_bathrooms</th>\n",
+       "      <th>livable_sqft</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>garage_type</th>\n",
+       "      <th>garage_sqft</th>\n",
+       "      <th>carport_sqft</th>\n",
+       "      <th>...</th>\n",
+       "      <th>has_pool</th>\n",
+       "      <th>has_central_heating</th>\n",
+       "      <th>has_central_cooling</th>\n",
+       "      <th>house_number</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>unit_number</th>\n",
+       "      <th>city</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>Year_levels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2089</th>\n",
+       "      <td>1946</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>833</td>\n",
+       "      <td>1304</td>\n",
+       "      <td>detached</td>\n",
+       "      <td>865</td>\n",
+       "      <td>477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>77143</td>\n",
+       "      <td>Hoover Ports</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>East Lucas</td>\n",
+       "      <td>11911</td>\n",
+       "      <td>212313.0</td>\n",
+       "      <td>1935-1950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year_built  stories  num_bedrooms  full_bathrooms  half_bathrooms  \\\n",
+       "2089        1946        1             2               1               0   \n",
+       "\n",
+       "      livable_sqft  total_sqft garage_type  garage_sqft  carport_sqft  \\\n",
+       "2089           833        1304    detached          865           477   \n",
+       "\n",
+       "         ...       has_pool  has_central_heating  has_central_cooling  \\\n",
+       "2089     ...          False                False                False   \n",
+       "\n",
+       "      house_number   street_name unit_number        city zip_code  sale_price  \\\n",
+       "2089         77143  Hoover Ports         NaN  East Lucas    11911    212313.0   \n",
+       "\n",
+       "      Year_levels  \n",
+       "2089    1935-1950  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 324,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes[selected_zip_codes['sale_price']== 212313.0]"
    ]
   },
   {
