made sevveral changes to servey.py ,model.py and predict.py

--- a/DataExploration_Cleaning_testing.ipynb
+++ b/DataExploration_Cleaning_testing.ipynb
@@ -2512,6 +2512,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>stories</th>\n",
+       "      <th>num_bedrooms</th>\n",
+       "      <th>full_bathrooms</th>\n",
+       "      <th>half_bathrooms</th>\n",
+       "      <th>livable_sqft</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>garage_type</th>\n",
+       "      <th>garage_sqft</th>\n",
+       "      <th>carport_sqft</th>\n",
+       "      <th>...</th>\n",
+       "      <th>has_pool</th>\n",
+       "      <th>has_central_heating</th>\n",
+       "      <th>has_central_cooling</th>\n",
+       "      <th>house_number</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>unit_number</th>\n",
+       "      <th>city</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>sale_price</th>\n",
+       "      <th>Year_levels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1311</td>\n",
+       "      <td>1694</td>\n",
+       "      <td>detached</td>\n",
+       "      <td>206</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>397</td>\n",
+       "      <td>Cox Way</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>West Ann</td>\n",
+       "      <td>10748</td>\n",
+       "      <td>311217.0</td>\n",
+       "      <td>2002-2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year_built  stories  num_bedrooms  full_bathrooms  half_bathrooms  \\\n",
+       "24        2007        1             2               2               0   \n",
+       "\n",
+       "    livable_sqft  total_sqft garage_type  garage_sqft  carport_sqft  \\\n",
+       "24          1311        1694    detached          206             0   \n",
+       "\n",
+       "       ...       has_pool  has_central_heating  has_central_cooling  \\\n",
+       "24     ...          False                 True                 True   \n",
+       "\n",
+       "    house_number  street_name unit_number      city zip_code  sale_price  \\\n",
+       "24           397      Cox Way         NaN  West Ann    10748    311217.0   \n",
+       "\n",
+       "    Year_levels  \n",
+       "24    2002-2018  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2007, 1, 2, 2, 0, 1311, 1694, 'detached', 206, 0, True, False,\n",
+       "        True, True, 397, 'Cox Way', nan, 'West Ann', 10748, 311217.0,\n",
+       "        '2002-2018']], dtype=object)"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_zip_codes.head(1).values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
