added the mean absolute error

--- a/Best_five_zipcodes.ipynb
+++ b/Best_five_zipcodes.ipynb
@@ -2284,6 +2284,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## the "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 546,
    "metadata": {},
    "outputs": [],
@@ -2316,9 +2325,28 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "d_new.columns"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
