added the choose model ipnb

--- a/model_choice.ipynb
+++ b/model_choice.ipynb
@@ -186,6 +186,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross validation\n",
+    "I will be testing the data models on both the training dataset and the test dataset to see the difference in the error rates.\n",
+    "* if the error on the training dataset is very low but the error on the testing dataset is too high then the model is over fitting. if they are both high then the model is uder fitting "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
